# galaxyview

./: AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  GVAddBookmarkDialog.cpp  GVAddBookmarkDialog.h  GVApp.cpp  GVApp.h  GVDBAliens.cpp  GVDBAliens.h  GVDBBulletin.cpp  GVDBBulletin.h  GVDBGeneral.h  GVDBObject.h  GVDBOptions.cpp  GVDBOptions.h  GVDBPlanets.cpp  GVDBPlanets.h  GVDBStatus.cpp  GVDBStatus.h  GVDeleteBookmarkDialog.cpp  GVDeleteBookmarkDialog.h  GVDialogs.h  GVError.cpp  GVError.h  GVFrame.cpp  GVFrame.h  GVGalaxy.cpp  GVGalaxy.h  GVGalaxyNGReport.cpp  GVGalaxyNGReport.h  GVGalaxyObject.h  GVGame.cpp  GVGame.h  GVGroup.h  GVHelpFrame.cpp  GVHelpFrame.h  GVInfoView.cpp  GVInfoView.h  GVMapPanel.cpp  (+48 more)
doc/CVS/: Entries  Repository
doc/development/: CodingConventions.txt  ErrorReporting.txt  ProjectPlan.html  StartingNewFiles.txt  planet_tables.sql  planet_tables.xml  sow.sxw
doc/development/CVS/: Entries  Repository
help/: bar_graphs_group.html  bar_graphs_planet.html  battle_simulator.html  battles.html  battles_mass.html  battles_tbl.html  bombings.html  bombings_size.html  bombings_tbl.html  bookmark_a.html  bookmark_add.html  edit_game.html  exit.html  groups.html  groups_mass.html  groups_tbl.html  index.html  load_game.html  new_game.html  preferences.html  zoom_out.html
help/CVS/: Entries  Repository
infoviews/: GVInfoPlanets.cpp  GVInfoPlanets.h
infoviews/CVS/: Entries  Repository
m4/CVS/: Entries  Repository
preferences/: GVPreferences.cpp  GVPreferences.h  GVPreferencesGame.cpp  GVPreferencesGame.h  GVPreferencesGeneral.cpp  GVPreferencesGeneral.h
preferences/CVS/: Entries  Repository
resource/: galaxyview.pov
resource/CVS/: Entries  Repository
resource/buttons/CVS/: Entries  Repository
resource/icons/CVS/: Entries  Repository
resource/screenshots/CVS/: Entries  Repository
resource/tables/: gv_tables.dtd  planet_rel.xtd  ships_rel.xml  ships_rel.xtd
resource/tables/CVS/: Entries  Repository
resource/ui/: addbookmarkdialog.xrc  deletebookmarkdialog.xrc  helpframe.xrc  menubar.xrc  newgamedialog.xrc  opengamedialog.xrc  toolbar.xrc
resource/ui/CVS/: Entries  Repository
resource/ui/preferences/: preferencesdialog.xrc  preferencesgame.xrc  preferencesgeneral.xrc
resource/ui/preferences/CVS/: Entries  Repository  Root
resource/ui/tools/: toolsbattlesimulator.xrc  toolscalculator.xrc  toolsintelligence.xrc  toolsmessagecenter.xrc  toolsmoveeditor.xrc  toolsplaneteditor.xrc  toolsshipdesigner.xrc  toolstexteditor.xrc  toolstreatyeditor.xrc
resource/ui/tools/CVS/: Entries  Repository
sql/: bookmarks.sql  bulletins.sql  options.sql  orders.sql  planets.sql  preferencesgame.sql  race.sql  status.sql
sql/CVS/: Entries  Repository
sqlite++/: Query.cpp  Query.h  Result.cpp  Result.h  Row.cpp  Row.h  SQLiteFile.cpp  SQLiteFile.h  sqlite++.h
sqlite++/CVS/: Entries  Repository
tools/: GVTools.cpp  GVTools.h  GVToolsBattleSimulator.cpp  GVToolsBattleSimulator.h  GVToolsCalculator.cpp  GVToolsCalculator.h  GVToolsIntelligence.cpp  GVToolsIntelligence.h  GVToolsMessageCenter.cpp  GVToolsMessageCenter.h  GVToolsMoveEditor.cpp  GVToolsMoveEditor.h  GVToolsPlanetEditor.cpp  GVToolsPlanetEditor.h  GVToolsShipDesigner.cpp  GVToolsShipDesigner.h  GVToolsTextEditor.cpp  GVToolsTextEditor.h  GVToolsTreatyEditor.cpp  GVToolsTreatyEditor.h
tools/CVS/: Entries  Repository
xtd/CVS/: Repository
xtd/expat/CVS/: Entries  Repository
